--- a/app/scss/_config.scss
+++ b/app/scss/_config.scss
@@ -7,7 +7,7 @@
 }
 
 ::selection {
-  background-color: $accent;
+  background-color: var(--first-color);
   color: #fff;
 }
 
@@ -70,7 +70,6 @@ a{
   text-decoration: none;
   color: var(--dark-color);
 }
-
 
 .section {
   padding: 3rem 0;
