--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -1,7 +1,7 @@
 @import "_mixins/font-face";
 /*===== GOOGLE FONTS =====*/
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
+//@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
 
 /*===== LOCAL FONTS =====*/
-@include font-face("roboto-example", "../fonts/RobotoRegular/RobotoRegular");
-@include font-face("roboto-example", "../fonts/RobotoBold/RobotoBold", bold);
+@include font-face("roboto", "../fonts/RobotoRegular/RobotoRegular");
+@include font-face("roboto", "../fonts/RobotoBold/RobotoBold", bold);
